# auto-clicker

./: .clang-format  CMakeLists.txt  LICENSE  README.md  example.qrc  qt.conf
config/: config.json
res/: main.qml
src/: Config.cpp  Config.hpp  Theme.cpp  Theme.hpp  main.cpp
